# sqlx

./: Cargo.toml  patch.md  rust-toolchain.toml
benches/any/: pool.rs
benches/sqlite/: describe.rs
examples/mysql/todos/: Cargo.toml
examples/postgres/axum-social-with-tests/: Cargo.toml
examples/postgres/axum-social-with-tests/src/: password.rs
examples/postgres/axum-social-with-tests/src/http/: mod.rs  user.rs
examples/postgres/chat/: Cargo.toml
examples/postgres/chat/src/: main.rs
examples/postgres/files/: Cargo.toml
examples/postgres/json/: Cargo.toml
examples/postgres/listen/: Cargo.toml
examples/postgres/mockable-todos/: Cargo.toml
examples/postgres/mockable-todos/src/: main.rs
examples/postgres/multi-database/: Cargo.toml
examples/postgres/multi-database/accounts/: Cargo.toml
examples/postgres/multi-database/accounts/src/: lib.rs
examples/postgres/multi-database/payments/: Cargo.toml
examples/postgres/multi-database/src/: main.rs
examples/postgres/multi-tenant/: Cargo.toml
examples/postgres/multi-tenant/accounts/: Cargo.toml
examples/postgres/multi-tenant/accounts/src/: lib.rs
examples/postgres/multi-tenant/payments/: Cargo.toml
examples/postgres/multi-tenant/src/: main.rs
examples/postgres/preferred-crates/uses-time/src/: lib.rs
examples/postgres/todos/: Cargo.toml
examples/postgres/transaction/: Cargo.toml
examples/sqlite/extension/: Cargo.toml
examples/sqlite/todos/: Cargo.toml
sqlx-cli/: Cargo.toml
sqlx-cli/src/: completions.rs  database.rs  lib.rs  metadata.rs  migrate.rs  opt.rs  prepare.rs
sqlx-cli/tests/common/: mod.rs
sqlx-core/: Cargo.toml
sqlx-core/src/: lib.rs  query_as.rs  query_builder.rs  query_scalar.rs  raw_sql.rs  row.rs  statement.rs  value.rs
sqlx-core/src/any/: driver.rs  error.rs  statement.rs
sqlx-core/src/any/connection/: backend.rs  executor.rs
sqlx-core/src/ext/: async_stream.rs
sqlx-core/src/migrate/: error.rs  migration.rs  source.rs
sqlx-core/src/net/: mod.rs
sqlx-core/src/net/socket/: mod.rs
sqlx-core/src/net/tls/: mod.rs  tls_native_tls.rs  tls_rustls.rs  util.rs
sqlx-core/src/pool/: connection.rs  inner.rs  mod.rs  options.rs
sqlx-core/src/rt/rt_async_io/: timeout.rs
sqlx-core/src/testing/: mod.rs
sqlx-core/src/types/: json.rs  non_zero.rs
sqlx-macros/: Cargo.toml
sqlx-macros-core/: Cargo.toml
sqlx-macros-core/src/: migrate.rs  test_attr.rs
sqlx-macros-core/src/database/: mod.rs
sqlx-macros-core/src/derives/: attributes.rs  decode.rs  encode.rs  mod.rs  row.rs  type.rs
sqlx-macros-core/src/query/: cache.rs  data.rs  input.rs  mod.rs  output.rs
sqlx-mysql/: Cargo.toml
sqlx-mysql/src/: any.rs  row.rs  statement.rs
sqlx-mysql/src/connection/: auth.rs  establish.rs  executor.rs  tls.rs
sqlx-mysql/src/options/: connect.rs  parse.rs
sqlx-mysql/src/protocol/: packet.rs
sqlx-mysql/src/protocol/connect/: auth_switch.rs  handshake.rs  handshake_response.rs
sqlx-mysql/src/protocol/response/: eof.rs
sqlx-mysql/src/protocol/statement/: execute.rs  row.rs
sqlx-mysql/src/protocol/text/: row.rs
sqlx-mysql/src/types/: bool.rs  chrono.rs  mysql_time.rs  uuid.rs
sqlx-postgres/: Cargo.toml
sqlx-postgres/src/: advisory_lock.rs  any.rs  bind_iter.rs  copy.rs  listener.rs  row.rs  type_info.rs
sqlx-postgres/src/connection/: describe.rs  establish.rs  executor.rs  sasl.rs
sqlx-postgres/src/message/: authentication.rs  bind.rs  copy.rs  flush.rs  mod.rs  parameter_description.rs  parse_complete.rs  password.rs
sqlx-postgres/src/options/: mod.rs  parse.rs  pgpass.rs
sqlx-postgres/src/types/: bigdecimal.rs  bit_vec.rs  cube.rs  hstore.rs  json.rs  mod.rs  numeric.rs  oid.rs  record.rs  rust_decimal.rs  str.rs
sqlx-postgres/src/types/geometry/: circle.rs  path.rs  point.rs  polygon.rs
sqlx-postgres/src/types/time/: date.rs  datetime.rs
sqlx-sqlite/: Cargo.toml
sqlx-sqlite/src/: any.rs  arguments.rs  error.rs  lib.rs  logger.rs  migrate.rs  regexp.rs  row.rs  value.rs
sqlx-sqlite/src/connection/: collation.rs  describe.rs  deserialize.rs  establish.rs  execute.rs  executor.rs  explain.rs  handle.rs  mod.rs  preupdate_hook.rs  worker.rs
sqlx-sqlite/src/options/: mod.rs  parse.rs
sqlx-sqlite/src/statement/: handle.rs  unlock_notify.rs  virtual.rs
sqlx-sqlite/src/types/: chrono.rs  json.rs  time.rs  uuid.rs
sqlx-test/: Cargo.toml
src/: lib.rs
src/macros/: mod.rs
tests/any/: any.rs  pool.rs
tests/mysql/: derives.rs  describe.rs  error.rs  macros.rs  migrate.rs  test-attr.rs  types.rs
tests/postgres/: describe.rs  error.rs  migrate.rs  postgres.rs  query_builder.rs  types.rs
tests/sqlite/: derives.rs  describe.rs  error.rs  migrate.rs  sqlcipher.rs  sqlite.rs  test-attr.rs  types.rs
