[workspace]
members = [
    ".",
    "sqlx-core",
    "sqlx-macros",
    "sqlx-macros-core",
    "sqlx-test",
    "sqlx-cli",
    #    "sqlx-bench",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "examples/mysql/todos",
    "examples/postgres/axum-social-with-tests",
    "examples/postgres/chat",
    "examples/postgres/files",
    "examples/postgres/json",
    "examples/postgres/listen",
    "examples/postgres/mockable-todos",
    "examples/postgres/multi-database",
    "examples/postgres/multi-tenant",
    "examples/postgres/preferred-crates",
    "examples/postgres/todos",
    "examples/postgres/transaction",
    "examples/sqlite/todos",
    "examples/sqlite/extension",
]

[workspace.package]
version = "0.9.0-alpha.1"
license = "MIT OR Apache-2.0"
# TODO: upgrade to edition 2024 (after merging all pending PRs)
edition = "2024"
repository = "https://github.com/launchbadge/sqlx"
keywords = ["database", "async", "postgres", "mysql", "sqlite"]
categories = ["database", "asynchronous"]
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>",
    "Daniel Akhterov <akhterovd@gmail.com>",
]
rust-version = "1.93.0"

[package]
name = "sqlx"
readme = "README.md"
documentation = "https://docs.rs/sqlx"
description = "🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries without a DSL. Supports PostgreSQL, MySQL, and SQLite."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# Note: written so that it may be copy-pasted to other crates
[package.metadata.docs.rs]
features = ["_unstable-docs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["any", "macros", "migrate", "json"]

derive = ["sqlx-macros/derive"]
macros = ["derive", "sqlx-macros/macros"]
migrate = ["sqlx-core/migrate", "sqlx-macros?/migrate", "sqlx-mysql?/migrate", "sqlx-postgres?/migrate", "sqlx-sqlite?/migrate"]

# Enable parsing of `sqlx.toml` for configuring macros and migrations.
sqlx-toml = ["sqlx-core/sqlx-toml", "sqlx-macros?/sqlx-toml", "sqlx-sqlite?/sqlx-toml"]

# intended mainly for CI and docs
all-databases = ["mysql", "sqlite", "postgres", "any"]
_unstable-all-types = [
    "bigdecimal",
    "rust_decimal",
    "json",
    "time",
    "chrono",
    "ipnet",
    "ipnetwork",
    "mac_address",
    "uuid",
    "bit-vec",
    "bstr"
]

# Render documentation that wouldn't otherwise be shown (e.g. `sqlx_core::config`).
_unstable-docs = [
    "all-databases",
    "_unstable-all-types",
    "sqlx-sqlite/_unstable-docs"
]

# Base runtime features without TLS
runtime-async-global-executor = ["_rt-async-global-executor", "sqlx-core/_rt-async-global-executor", "sqlx-macros?/_rt-async-global-executor"]
runtime-async-std = ["_rt-async-std", "sqlx-core/_rt-async-std", "sqlx-macros?/_rt-async-std"]
runtime-smol = ["_rt-smol", "sqlx-core/_rt-smol", "sqlx-macros?/_rt-smol"]
runtime-tokio = ["_rt-tokio", "sqlx-core/_rt-tokio", "sqlx-macros?/_rt-tokio"]

# TLS features
tls-native-tls = ["sqlx-core/_tls-native-tls", "sqlx-macros?/_tls-native-tls"]
tls-rustls = ["tls-rustls-ring"] # For backwards compatibility
tls-rustls-aws-lc-rs = ["sqlx-core/_tls-rustls-aws-lc-rs", "sqlx-macros?/_tls-rustls-aws-lc-rs"]
tls-rustls-ring = ["tls-rustls-ring-webpki"] # For backwards compatibility
tls-rustls-ring-webpki = ["sqlx-core/_tls-rustls-ring-webpki", "sqlx-macros?/_tls-rustls-ring-webpki"]
tls-rustls-ring-native-roots = ["sqlx-core/_tls-rustls-ring-native-roots", "sqlx-macros?/_tls-rustls-ring-native-roots"]

# No-op feature used by the workflows to compile without TLS enabled. Not meant for general use.
tls-none = []

# for conditional compilation
_rt-async-global-executor = []
_rt-async-std = []
_rt-smol = []
_rt-tokio = []
_sqlite = []

# database
any = ["sqlx-core/any", "sqlx-mysql?/any", "sqlx-postgres?/any", "sqlx-sqlite?/any"]
postgres = ["sqlx-postgres", "sqlx-macros?/postgres"]
mysql = ["sqlx-mysql", "sqlx-macros?/mysql"]
sqlite = ["sqlite-bundled", "sqlite-deserialize", "sqlite-load-extension", "sqlite-unlock-notify"]

# SQLite base features
sqlite-bundled = ["_sqlite", "sqlx-sqlite/bundled", "sqlx-macros?/sqlite"]
sqlite-unbundled = ["_sqlite", "sqlx-sqlite/unbundled", "sqlx-macros?/sqlite-unbundled"]

# SQLite features using conditionally compiled APIs
# Note: these assume `sqlite-bundled` or `sqlite-unbundled` is also enabled
#
# Enable `SqliteConnection::deserialize()` and `::serialize()`
# Cannot be used with `-DSQLITE_OMIT_DESERIALIZE`; requires `-DSQLITE_ENABLE_DESERIALIZE` on SQLite < 3.36.0
sqlite-deserialize = ["sqlx-sqlite/deserialize"]

# Enable `SqliteConnectOptions::extension()` and `::extension_with_entrypoint()`.
# Also required to use `drivers.sqlite.unsafe-load-extensions` from `sqlx.toml`.
# Cannot be used with `-DSQLITE_OMIT_LOAD_EXTENSION`
sqlite-load-extension = ["sqlx-sqlite/load-extension", "sqlx-macros?/sqlite-load-extension"]

# Enables `sqlite3_preupdate_hook`
# Requires `-DSQLITE_ENABLE_PREUPDATE_HOOK` (set automatically with `sqlite-bundled`)
sqlite-preupdate-hook = ["sqlx-sqlite/preupdate-hook"]

# Enable internal handling of `SQLITE_LOCKED_SHAREDCACHE`
# Requires `-DSQLITE_ENABLE_UNLOCK_NOTIFY` (set automatically with `sqlite-bundled`)
sqlite-unlock-notify = ["sqlx-sqlite/unlock-notify"]

# types
json = ["sqlx-core/json", "sqlx-macros?/json", "sqlx-mysql?/json", "sqlx-postgres?/json", "sqlx-sqlite?/json"]

bigdecimal = ["sqlx-core/bigdecimal", "sqlx-macros?/bigdecimal", "sqlx-mysql?/bigdecimal", "sqlx-postgres?/bigdecimal"]
bit-vec = ["sqlx-core/bit-vec", "sqlx-macros?/bit-vec", "sqlx-postgres?/bit-vec"]
chrono = ["sqlx-core/chrono", "sqlx-macros?/chrono", "sqlx-mysql?/chrono", "sqlx-postgres?/chrono", "sqlx-sqlite?/chrono"]
ipnet = ["sqlx-core/ipnet", "sqlx-macros?/ipnet", "sqlx-postgres?/ipnet"]
ipnetwork = ["sqlx-core/ipnetwork", "sqlx-macros?/ipnetwork", "sqlx-postgres?/ipnetwork"]
mac_address = ["sqlx-core/mac_address", "sqlx-macros?/mac_address", "sqlx-postgres?/mac_address"]
rust_decimal = ["sqlx-core/rust_decimal", "sqlx-macros?/rust_decimal", "sqlx-mysql?/rust_decimal", "sqlx-postgres?/rust_decimal"]
time = ["sqlx-core/time", "sqlx-macros?/time", "sqlx-mysql?/time", "sqlx-postgres?/time", "sqlx-sqlite?/time"]
uuid = ["sqlx-core/uuid", "sqlx-macros?/uuid", "sqlx-mysql?/uuid", "sqlx-postgres?/uuid", "sqlx-sqlite?/uuid"]
regexp = ["sqlx-sqlite?/regexp"]
bstr = ["sqlx-core/bstr"]

[workspace.dependencies]
# Core Crates
sqlx-core = { version = "=0.9.0-alpha.1", path = "sqlx-core" }
sqlx-macros-core = { version = "=0.9.0-alpha.1", path = "sqlx-macros-core" }
sqlx-macros = { version = "=0.9.0-alpha.1", path = "sqlx-macros" }

# Driver crates
sqlx-mysql = { version = "=0.9.0-alpha.1", path = "sqlx-mysql" }
sqlx-postgres = { version = "=0.9.0-alpha.1", path = "sqlx-postgres" }
sqlx-sqlite = { version = "=0.9.0-alpha.1", path = "sqlx-sqlite" }

# Facade crate (for reference from sqlx-cli)
sqlx = { version = "=0.9.0-alpha.1", path = ".", default-features = false }

# Common type integrations shared by multiple driver crates.
# These are optional unless enabled in a workspace crate.
bigdecimal = "0.4.10"
bit-vec = "0.8"
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }
ipnet = "2.11.0"
ipnetwork = "0.21.1"
mac_address = "1.1.8"
rust_decimal = { version = "1.40.0", default-features = false, features = ["std"] }
time = { version = "0.3.46", features = ["formatting", "parsing", "macros"] }
uuid = "1.20.0"

# Common utility crates
cfg-if = "1.0.4"
dotenvy = { version = "0.15.7", default-features = false }
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }

# Runtimes
[workspace.dependencies.async-global-executor]
version = "3.1"
default-features = false
features = ["async-io"]

[workspace.dependencies.async-std]
version = "1.13"

[workspace.dependencies.smol]
version = "2.0"
default-features = false

[workspace.dependencies.tokio]
version = "1"
features = ["time", "net", "sync", "fs", "io-util", "rt"]
default-features = false

# Futures Ecosystem
[workspace.dependencies.futures-core]
version = "0.3.31"
default-features = false

[workspace.dependencies.futures-channel]
version = "0.3.31"
default-features = false
features = ["sink", "alloc", "std"]

[workspace.dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["alloc", "sink", "io"]

[workspace.dependencies.futures-io]
version = "0.3.31"

[workspace.dependencies.futures-intrusive]
version = "0.5.0"

[workspace.dependencies.futures-executor]
version = "0.3.31"

# Cryptographic
[workspace.dependencies.sha2]
version = "0.11.0-rc.4"
default-features = false

[workspace.dependencies.sha1]
version = "0.11.0-rc.4"
default-features = false

[workspace.dependencies.crc]
version = "3"

[workspace.dependencies.hkdf]
version = "0.13.0-rc.4"

[workspace.dependencies.hmac]
version = "0.13.0-rc.4"
default-features = false

[workspace.dependencies.md-5]
version = "0.11.0-rc.4"
default-features = false

[workspace.dependencies.rand]
version = "0.10.0-rc.7"
default-features = false
features = ["std", "std_rng", "thread_rng"]

[workspace.dependencies.rsa]
version = "0.10.0-rc.13"

[workspace.dependencies.digest]
version = "0.11.0-rc.9"
default-features = false

# Serialization
[workspace.dependencies.serde]
version = "1.0.228"
default-features = false
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.149"
features = ["raw_value"]

[workspace.dependencies.toml]
version = "0.9.11"

# String/Parsing
[workspace.dependencies.atoi]
version = "2.0"

[workspace.dependencies.hex]
version = "0.4.3"

[workspace.dependencies.percent-encoding]
version = "2.3.2"

[workspace.dependencies.stringprep]
version = "0.1.5"

[workspace.dependencies.url]
version = "2.5.8"

[workspace.dependencies.base64]
version = "0.22.1"
default-features = false
features = ["std"]

[workspace.dependencies.memchr]
version = "2.7.6"
default-features = false

[workspace.dependencies.bstr]
version = "1.12"
default-features = false
features = ["std"]

# General Utilities
[workspace.dependencies.bytes]
version = "1.11.0"

[workspace.dependencies.byteorder]
version = "1.5.0"
default-features = false
features = ["std"]

[workspace.dependencies.either]
version = "1.15.0"

[workspace.dependencies.log]
version = "0.4.29"
default-features = false

[workspace.dependencies.tracing]
version = "0.1.44"
features = ["log"]

[workspace.dependencies.smallvec]
version = "2.0.0-alpha.12"

[workspace.dependencies.bitflags]
version = "2"
default-features = false

[workspace.dependencies.whoami]
version = "2.0.2"
default-features = false

[workspace.dependencies.itoa]
version = "1.0.17"

# TLS
[workspace.dependencies.native-tls]
version = "0.2.14"

[workspace.dependencies.rustls]
version = "0.23.36"
default-features = false
features = ["std", "tls12"]

[workspace.dependencies.webpki-roots]
version = "1.0.5"

[workspace.dependencies.rustls-native-certs]
version = "0.8.3"

# Async I/O
[workspace.dependencies.async-fs]
version = "2.2"

[workspace.dependencies.async-io]
version = "2.6.0"

[workspace.dependencies.async-task]
version = "4.7.1"

[workspace.dependencies.tokio-stream]
version = "0.1.18"
features = ["fs"]

[workspace.dependencies.crossbeam-queue]
version = "0.3.12"

[workspace.dependencies.event-listener]
version = "5.4.1"

# Data Structures
[workspace.dependencies.hashlink]
version = "0.11.0"

[workspace.dependencies.indexmap]
version = "2.13"

[workspace.dependencies.hashbrown]
version = "0.16.1"

# Macro/Proc-macro
[workspace.dependencies.proc-macro2]
version = "1.0.106"
default-features = false

[workspace.dependencies.syn]
version = "2.0.114"
default-features = false

[workspace.dependencies.quote]
version = "1.0.44"
default-features = false

[workspace.dependencies.heck]
version = "0.5"

# SQLite-specific
[workspace.dependencies.libsqlite3-sys]
version = "0.36.0"
default-features = false
features = ["pkg-config", "vcpkg"]

[workspace.dependencies.flume]
version = "0.12.0"
default-features = false
features = ["async"]

[workspace.dependencies.regex]
version = "1.12.2"

[workspace.dependencies.serde_urlencoded]
version = "0.7"

# PostgreSQL-specific
[workspace.dependencies.num-bigint]
version = "0.4.6"

[workspace.dependencies.home]
version = "0.5.12"

[workspace.dependencies.etcetera]
version = "0.11.0"

# CLI-specific
[workspace.dependencies.clap]
version = "4.5.54"
features = ["derive", "env", "wrap_help"]

[workspace.dependencies.clap_complete]
version = "4.5.65"

[workspace.dependencies.console]
version = "0.16.2"

[workspace.dependencies.dialoguer]
version = "0.12.0"
default-features = false

[workspace.dependencies.glob]
version = "0.3.3"

[workspace.dependencies.cargo_metadata]
version = "0.23.1"

[workspace.dependencies.filetime]
version = "0.2"

[workspace.dependencies.backoff]
version = "0.4.0"
features = ["futures", "tokio"]

[workspace.dependencies.openssl]
version = "0.10.75"

[workspace.dependencies.anyhow]
version = "1.0.100"

# Dev/Test
[workspace.dependencies.tempfile]
version = "3.24.0"

[workspace.dependencies.assert_cmd]
version = "2.1.2"

[workspace.dependencies.env_logger]
version = "0.11"

[workspace.dependencies.criterion]
version = "0.8.1"
features = ["async_tokio"]

[workspace.dependencies.trybuild]
version = "1.0.114"

[workspace.dependencies.paste]
version = "1.0.15"

[workspace.dependencies.rand_chacha]
version = "0.10.0-rc.6"

[dependencies]
sqlx-core = { workspace = true, features = ["offline", "migrate"] }
sqlx-macros = { workspace = true, optional = true }

sqlx-mysql = { workspace = true, optional = true }
sqlx-postgres = { workspace = true, optional = true }
sqlx-sqlite = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
time_ = { version = "0.3.46", package = "time" }
futures-util = { workspace = true }
env_logger = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = { workspace = true }
trybuild = { workspace = true }
sqlx-test = { path = "./sqlx-test" }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
libsqlite3-sys = { version = "0.36.0" }

[patch.crates-io]
rand = { git = "https://github.com/earthlings-dev/rand.git" }
rand_core = { git = "https://github.com/earthlings-dev/rand_core.git" }
rand_chacha = { git = "https://github.com/earthlings-dev/rngs.git" }
crypto-primes = { git = "https://github.com/earthlings-dev/crypto-primes.git" }
rsa = { git = "https://github.com/earthlings-dev/rsa.git" }

# If this is an unconditional dev-dependency then Cargo will *always* try to build `libsqlite3-sys`,
# even when SQLite isn't the intended test target, and fail if the build environment is not set up for compiling C code.
[target.'cfg(sqlite_test_sqlcipher)'.dev-dependencies]
# Enable testing with SQLCipher if specifically requested.
libsqlite3-sys = { version = "0.36.0", features = ["bundled-sqlcipher"] }

# Common lint settings for the workspace
[workspace.lints.clippy]
# https://github.com/launchbadge/sqlx/issues/3440
cast_possible_truncation = 'deny'
cast_possible_wrap = 'deny'
cast_sign_loss = 'deny'
# See `clippy.toml`
disallowed_methods = 'deny'


[lints.rust.unexpected_cfgs]
level = 'warn'
check-cfg = [
    'cfg(mariadb, values(any()))',
    'cfg(postgres, values(any()))',
    'cfg(sqlite_ipaddr)',
    'cfg(sqlite_test_sqlcipher)',
]

#
# Any
#

[[test]]
name = "any"
path = "tests/any/any.rs"
required-features = ["any"]

[[test]]
name = "any-pool"
path = "tests/any/pool.rs"
required-features = ["any"]

#
# Migrations
#

[[test]]
name = "migrate-macro"
path = "tests/migrate/macro.rs"
required-features = ["macros", "migrate"]

#
# SQLite
#

[[test]]
name = "sqlite"
path = "tests/sqlite/sqlite.rs"
required-features = ["sqlite"]

[[test]]
name = "sqlite-any"
path = "tests/sqlite/any.rs"
required-features = ["sqlite"]

[[test]]
name = "sqlite-types"
path = "tests/sqlite/types.rs"
required-features = ["sqlite"]

[[test]]
name = "sqlite-describe"
path = "tests/sqlite/describe.rs"
required-features = ["sqlite"]

[[test]]
name = "sqlite-macros"
path = "tests/sqlite/macros.rs"
required-features = ["_sqlite", "macros"]

[[test]]
name = "sqlite-derives"
path = "tests/sqlite/derives.rs"
required-features = ["sqlite", "macros"]

[[test]]
name = "sqlite-error"
path = "tests/sqlite/error.rs"
required-features = ["sqlite"]

[[test]]
name = "sqlite-sqlcipher"
path = "tests/sqlite/sqlcipher.rs"
required-features = ["sqlite"]

[[test]]
name = "sqlite-test-attr"
path = "tests/sqlite/test-attr.rs"
required-features = ["sqlite", "macros", "migrate"]

[[test]]
name = "sqlite-migrate"
path = "tests/sqlite/migrate.rs"
required-features = ["sqlite", "macros", "migrate"]

[[test]]
name = "sqlite-rustsec"
path = "tests/sqlite/rustsec.rs"
required-features = ["sqlite"]

[[bench]]
name = "sqlite-describe"
path = "benches/sqlite/describe.rs"
harness = false
required-features = ["sqlite"]

#
# MySQL
#

[[test]]
name = "mysql"
path = "tests/mysql/mysql.rs"
required-features = ["mysql"]

[[test]]
name = "mysql-types"
path = "tests/mysql/types.rs"
required-features = ["mysql"]

[[test]]
name = "mysql-describe"
path = "tests/mysql/describe.rs"
required-features = ["mysql"]

[[test]]
name = "mysql-derives"
path = "tests/mysql/derives.rs"
required-features = ["mysql", "derive"]

[[test]]
name = "mysql-macros"
path = "tests/mysql/macros.rs"
required-features = ["mysql", "macros"]

[[test]]
name = "mysql-error"
path = "tests/mysql/error.rs"
required-features = ["mysql"]

[[test]]
name = "mysql-test-attr"
path = "tests/mysql/test-attr.rs"
required-features = ["mysql", "macros", "migrate"]

[[test]]
name = "mysql-migrate"
path = "tests/mysql/migrate.rs"
required-features = ["mysql", "macros", "migrate"]

[[test]]
name = "mysql-rustsec"
path = "tests/mysql/rustsec.rs"
required-features = ["mysql"]

#
# PostgreSQL
#

[[test]]
name = "postgres"
path = "tests/postgres/postgres.rs"
required-features = ["postgres"]

[[test]]
name = "postgres-types"
path = "tests/postgres/types.rs"
required-features = ["postgres"]

[[test]]
name = "postgres-describe"
path = "tests/postgres/describe.rs"
required-features = ["postgres"]

[[test]]
name = "postgres-macros"
path = "tests/postgres/macros.rs"
required-features = ["postgres", "macros"]

[[test]]
name = "postgres-derives"
path = "tests/postgres/derives.rs"
required-features = ["postgres", "macros"]

[[test]]
name = "postgres-error"
path = "tests/postgres/error.rs"
required-features = ["postgres"]

[[test]]
name = "postgres-test-attr"
path = "tests/postgres/test-attr.rs"
required-features = ["postgres", "macros", "migrate"]

[[test]]
name = "postgres-migrate"
path = "tests/postgres/migrate.rs"
required-features = ["postgres", "macros", "migrate"]

[[test]]
name = "postgres-query-builder"
path = "tests/postgres/query_builder.rs"
required-features = ["postgres"]

[[test]]
name = "postgres-rustsec"
path = "tests/postgres/rustsec.rs"
required-features = ["postgres", "macros", "migrate"]
