[package]
name = "sqlx-cli"
version.workspace = true
description = "Command-line utility for SQLx, the Rust SQL toolkit."
edition.workspace = true
readme = "README.md"
homepage = "https://github.com/launchbadge/sqlx"
repository = "https://github.com/launchbadge/sqlx"
keywords = ["database", "postgres", "database-management", "migration"]
categories = ["database", "command-line-utilities"]
license = "MIT OR Apache-2.0"
default-run = "sqlx"
authors = [
    "Jesper Axelsson <jesperaxe@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
]
rust-version.workspace = true

[[bin]]
name = "sqlx"
path = "src/bin/sqlx.rs"

# enables invocation as `cargo sqlx`; required for `prepare` subcommand
[[bin]]
name = "cargo-sqlx"
path = "src/bin/cargo-sqlx.rs"

[dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
futures-util = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true, optional = true }
chrono = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }
openssl = { workspace = true, optional = true }
cargo_metadata = { workspace = true }
filetime = { workspace = true }

backoff = { workspace = true }

[dependencies.sqlx]
workspace = true
default-features = false
features = [
    "runtime-tokio",
    "migrate",
    "any",
]

[features]
default = ["postgres", "sqlite", "mysql", "native-tls", "completions", "sqlx-toml"]

# TLS options
rustls = ["sqlx/tls-rustls"]
native-tls = ["sqlx/tls-native-tls"]

# databases
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite", "_sqlite"]
sqlite-unbundled = ["sqlx/sqlite-unbundled", "_sqlite"]

# workaround for musl + openssl issues
openssl-vendored = ["openssl/vendored"]

completions = ["dep:clap_complete"]

sqlx-toml = ["sqlx/sqlx-toml"]

# Conditional compilation only
_sqlite = []

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
