[package]
name = "sqlx-core"
description = "Core of SQLx, the rust SQL toolkit. Not intended to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["offline"]

[features]
default = []
migrate = ["sha2", "crc"]

any = []

json = ["serde", "serde_json"]

# for conditional compilation
_rt-async-global-executor = ["async-global-executor", "_rt-async-io", "_rt-async-task"]
_rt-async-io = ["async-io", "async-fs"] # see note at async-fs declaration
_rt-async-std = ["async-std", "_rt-async-io"]
_rt-async-task = ["async-task"]
_rt-smol = ["smol", "_rt-async-io", "_rt-async-task"]
_rt-tokio = ["tokio", "tokio-stream"]

_tls-native-tls = ["native-tls"]
_tls-rustls-aws-lc-rs = ["_tls-rustls", "rustls/aws-lc-rs", "webpki-roots"]
_tls-rustls-ring-webpki = ["_tls-rustls", "rustls/ring", "webpki-roots"]
_tls-rustls-ring-native-roots = ["_tls-rustls", "rustls/ring", "rustls-native-certs"]
_tls-rustls = ["rustls"]
_tls-none = []

# support offline/decoupled building (enables serialization of `Describe`)
offline = ["serde", "either/serde"]

# Enable parsing of `sqlx.toml`.
# For simplicity, the `config` module is always enabled,
# but disabling this disables the `serde` derives and the `toml` crate,
# which is a good bit less code to compile if the feature isn't being used.
sqlx-toml = ["serde", "toml/parse"]

_unstable-doc = ["sqlx-toml"]

[dependencies]
# Runtimes
async-global-executor = { workspace = true, optional = true }
async-std = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# TLS
native-tls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }

# Type Integrations
bit-vec = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
time = { workspace = true, optional = true }
ipnet = { workspace = true, optional = true }
ipnetwork = { workspace = true, optional = true }
mac_address = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# work around bug in async-fs 2.0.0, which references futures-lite dependency wrongly, see https://github.com/launchbadge/sqlx/pull/3791#issuecomment-3043363281
async-fs = { workspace = true, optional = true }
async-io = { workspace = true, optional = true }
async-task = { workspace = true, optional = true }

base64 = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
crc = { workspace = true, optional = true }
crossbeam-queue = { workspace = true }
either = { workspace = true }
futures-core = { workspace = true }
futures-io = { workspace = true }
futures-intrusive = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true, features = ["rc"], optional = true }
serde_json = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
#sqlformat = "0.2.0"
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true }
smallvec = { workspace = true }
url = { workspace = true }
bstr = { workspace = true, optional = true }
hashlink = { workspace = true }
indexmap = { workspace = true }
event-listener = { workspace = true }
hashbrown = { workspace = true }

thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }

[dev-dependencies.sqlx]
# FIXME: https://github.com/rust-lang/cargo/issues/15622
# workspace = true
path = ".."
default-features = false
features = ["postgres", "sqlite", "mysql", "migrate", "macros", "time", "uuid"]

[lints]
workspace = true
