[package]
name = "sqlx-mysql"
documentation = "https://docs.rs/sqlx"
description = "MySQL driver implementation for SQLx. Not for direct use; see the `sqlx` crate for details."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
json = ["sqlx-core/json", "serde"]
any = ["sqlx-core/any"]
offline = ["sqlx-core/offline", "serde/derive"]
migrate = ["sqlx-core/migrate"]

# Type Integration features
bigdecimal = ["dep:bigdecimal", "sqlx-core/bigdecimal"]
chrono = ["dep:chrono", "sqlx-core/chrono"]
rust_decimal = ["dep:rust_decimal", "rust_decimal/maths", "sqlx-core/rust_decimal"]
time = ["dep:time", "sqlx-core/time"]
uuid = ["dep:uuid", "sqlx-core/uuid"]

[dependencies]
sqlx-core = { workspace = true }

# Futures crates
futures-channel = { workspace = true }
futures-core = { workspace = true }
futures-io = { workspace = true }
futures-util = { workspace = true }

# Cryptographic Primitives
crc = { workspace = true }
digest = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }

# Type Integrations (versions inherited from `[workspace.dependencies]`)
bigdecimal = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
time = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# Misc
atoi = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true, features = ["serde"] }
byteorder = { workspace = true }
bytes = { workspace = true }
either = { workspace = true }
generic-array = { workspace = true }
hex = { workspace = true }
itoa = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
percent-encoding = { workspace = true }
smallvec = { workspace = true }
stringprep = { workspace = true }
tracing = { workspace = true }
whoami = { workspace = true }

dotenvy = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true, optional = true }

[dev-dependencies]
# FIXME: https://github.com/rust-lang/cargo/issues/15622
sqlx = { path = "..", default-features = false, features = ["mysql"] }

[lints]
workspace = true
