[package]
name = "sqlx-postgres"
documentation = "https://docs.rs/sqlx"
description = "PostgreSQL driver implementation for SQLx. Not for direct use; see the `sqlx` crate for details."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
any = ["sqlx-core/any"]
json = ["sqlx-core/json"]
migrate = ["sqlx-core/migrate"]
offline = ["sqlx-core/offline"]

# Type Integration features
bigdecimal = ["dep:bigdecimal", "dep:num-bigint", "sqlx-core/bigdecimal"]
bit-vec = ["dep:bit-vec", "sqlx-core/bit-vec"]
chrono = ["dep:chrono", "sqlx-core/chrono"]
ipnet = ["dep:ipnet", "sqlx-core/ipnet"]
ipnetwork = ["dep:ipnetwork", "sqlx-core/ipnetwork"]
mac_address = ["dep:mac_address", "sqlx-core/mac_address"]
rust_decimal = ["dep:rust_decimal", "rust_decimal/maths", "sqlx-core/rust_decimal"]
time = ["dep:time", "sqlx-core/time"]
uuid = ["dep:uuid", "sqlx-core/uuid"]

[dependencies]
# Futures crates
futures-channel = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }

# Cryptographic Primitives
crc = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# Type Integrations (versions inherited from `[workspace.dependencies]`)
bigdecimal = { workspace = true, optional = true }
bit-vec = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
ipnet = { workspace = true, optional = true }
ipnetwork = { workspace = true, optional = true }
mac_address = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
time = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# Misc
atoi = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
hex = { workspace = true }
home = { workspace = true }
itoa = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
num-bigint = { workspace = true, optional = true }
smallvec = { workspace = true, features = ["serde"] }
stringprep = { workspace = true }
tracing = { workspace = true }
whoami = { workspace = true }

dotenvy = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[dependencies.sqlx-core]
workspace = true
# We use JSON in the driver implementation itself so there's no reason not to enable it here.
features = ["json"]

[dev-dependencies.sqlx]
# FIXME: https://github.com/rust-lang/cargo/issues/15622
# workspace = true
path = ".."
features = ["postgres", "derive"]

[target.'cfg(target_os = "windows")'.dependencies]
etcetera = { workspace = true }

[lints]
workspace = true
