[package]
name = "sqlx-sqlite"
documentation = "https://docs.rs/sqlx"
description = "SQLite driver implementation for SQLx. Not for direct use; see the `sqlx` crate for details."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
any = ["sqlx-core/any"]
json = ["sqlx-core/json", "serde"]
offline = ["sqlx-core/offline", "serde"]
migrate = ["sqlx-core/migrate"]

# Type integrations
chrono = ["dep:chrono", "sqlx-core/chrono"]
time = ["dep:time", "sqlx-core/time"]
uuid = ["dep:uuid", "sqlx-core/uuid"]

regexp = ["dep:regex"]

# Conditionally compiled SQLite features
deserialize = []
load-extension = []
preupdate-hook = ["libsqlite3-sys/preupdate_hook"]
unlock-notify = ["libsqlite3-sys/unlock_notify"]

bundled = ["libsqlite3-sys/bundled"]
unbundled = ["libsqlite3-sys/buildtime_bindgen"]

sqlx-toml = ["sqlx-core/sqlx-toml"]

# Note: currently unused, only to satisfy "unexpected `cfg` condition" lint
bigdecimal = []
rust_decimal = []

_unstable-all-types = [
    "json", "chrono", "time", "uuid",
]

_unstable-all-sqlite-features = [
    "deserialize",
    "load-extension",
    "preupdate-hook",
    "unlock-notify",
]

_unstable-docs = [
    "bundled", "any",
    "_unstable-all-types",
    "_unstable-all-sqlite-features"
]

[dependencies.libsqlite3-sys]
workspace = true

[dependencies]
futures-core = { workspace = true }
futures-channel = { workspace = true }
# used by the SQLite worker thread to block on the async mutex that locks the database handle
futures-executor = { workspace = true }
futures-intrusive = { workspace = true }
futures-util = { workspace = true }

chrono = { workspace = true, optional = true }
time = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

url = { workspace = true }
percent-encoding = { workspace = true }
serde_urlencoded = { workspace = true }

flume = { workspace = true }

atoi = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }

thiserror = { workspace = true }

serde = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

[dependencies.sqlx-core]
workspace = true

[dev-dependencies.sqlx]
# FIXME: https://github.com/rust-lang/cargo/issues/15622
# workspace = true
path = ".."
default-features = false
features = ["macros", "runtime-tokio", "tls-none", "sqlite"]

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["__unstable_docs"]
