[package]
name = "sqlx-test"
version = "0.1.0"
edition.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
sqlx = { default-features = false, path = ".." }
env_logger = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
