[package]
name = "sqlx-example-postgres-chat"
version = "0.1.0"
edition = "2021"
workspace = "../../../"

[dependencies]
sqlx = { path = "../../../", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.20.0", features = [ "rt-multi-thread", "macros" ] }
ratatui = { git = "https://github.com/takumi-earth/ratatui", rev = "c250e525a67625dde14a70ccd4cb563610ba103d" }
crossterm = "0.29.0"
unicode-width = "0.2.2"
